fix user login endpoint
